# ChangeLog for media-tv/xbmc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/xbmc/ChangeLog,v 1.147 2012/09/16 20:19:21 vapier Exp $

  16 Sep 2012; Mike Frysinger <vapier@gentoo.org> xbmc-9999.ebuild:
  Depend on taglib-1.8 to match upstream #434658 by BT.

  08 Sep 2012; Mike Frysinger <vapier@gentoo.org> xbmc-9999.ebuild:
  Add USE=upnp support #434270 by BT.

  08 Sep 2012; Mike Frysinger <vapier@gentoo.org>
  files/xbmc-9999-no-arm-flags.patch:
  Update arm flags patch to latest git #434182 by BT.

  05 Sep 2012; Justin Lecher <jlec@gentoo.org> xbmc-11.0.ebuild,
  xbmc-9999.ebuild:
  Use domenu instead insinto + doins to install .desktop files

  04 Aug 2012; Mike Frysinger <vapier@gentoo.org>
  files/xbmc-9999-nomythtv.patch:
  Update mythtv patch to latest git #429588 by BT.

  15 Jul 2012; Mike Frysinger <vapier@gentoo.org>
  +files/xbmc-11.0-nomythtv.patch, files/xbmc-9999-nomythtv.patch,
  xbmc-11.0.ebuild:
  Update mythtv patch to latest git #426376 by BT.

  02 Jul 2012; Mike Frysinger <vapier@gentoo.org>
  files/xbmc-9999-no-arm-flags.patch:
  Update patch to latest git #424485 by tsubus.

  08 Jun 2012; Mike Frysinger <vapier@gentoo.org> xbmc-11.0.ebuild,
  xbmc-9999.ebuild:
  Update path to xbmc icon #419989 by candrews.

  22 May 2012; Jeff Horelick <jdhore@gentoo.org> xbmc-11.0.ebuild:
  marked x86 per bug 415907

  22 May 2012; Diego E. Pettenò <flameeyes@gentoo.org> xbmc-11.0.ebuild,
  xbmc-9999.ebuild:
  Allow using older libav as well, for postproc.

  22 May 2012; Diego E. Pettenò <flameeyes@gentoo.org> xbmc-11.0.ebuild,
  xbmc-9999.ebuild:
  Add an explicit dependency over libpostproc.

  14 May 2012; Agostino Sarubbo <ago@gentoo.org> xbmc-11.0.ebuild:
  Stable for amd64, wrt bug #415907

  14 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> xbmc-9999.ebuild:
  Add dep over tinyxml. Fixes bug#415681.

  29 Apr 2012; Mike Frysinger <vapier@gentoo.org>