@@ -11,23 +11,23 @@ AUX xbmc-9999-no-arm-flags.patch 478 SHA256 075db2562d31914d86b4394500d4b3168ea7
 AUX xbmc-9999-nomythtv.patch 1680 SHA256 fe0289d1361b0dde3c261bc082bcad123c9cc9a2b7398e4eb48773f976be93a2 SHA512 403389bb1bf1442be1a8d23106bd78dc672c66fcf588b6076e6105023a69a92ca58cdaa91c9e2664123f244c3d5f42a9de6f72845c702339e3f8a0e976330ca1 WHIRLPOOL dcf13b59133f2b7288bc734803ad1317d6e943f7cd85b0428ec257b2ec9fb6a23311fbdd8574dbfb985a473dac7cf8ca30c2ac6d59b62797adb1f63d8bcc0b12
 DIST xbmc-11.0.tar.gz 63012044 SHA256 1fe5d310c16138f26e2b13bc545604e95f48ace6c8636f23e77da402cd7b0b19 SHA512 ba738129f70dd171b3fae385ab44317f62c9041a116bfe809d6d07c99ea69c663ad5d598552a17be0b942251ce12a68f34d0be21b303b256055849a6dde90043 WHIRLPOOL 4dd068749c86542e39b8fc42b45bbb56e885813b17876d3583cb4d91c902ff075e1f16f1c19720e3430dc149c40e52e7d1ab3323f666263fb353a59e2ef94a8e
 EBUILD xbmc-11.0.ebuild 6230 SHA256 cc9c8e0f4cbc99f6b02b8385f8ef08c9d7fe128a619eb650d4a627f8f7bbd391 SHA512 8a08020a237c0147163c5a8c57f1d23c5a3c0fdc1571ab640b3096eff49d28da60efbf86d42fa8139c88b6e073a9f689715b366cad9092d71ee2646165e91bc0 WHIRLPOOL 7a64f09945fc96f319b7869450eb4c1e7f74646c6f89d3a51f7908d3f56c99f9b185863b992f6fca8c929d7a53d6fea465f9ec9cfc977d113b83f8378f9957fb
-EBUILD xbmc-9999.ebuild 5956 SHA256 155ca367970036cb68790ae2f5c38d36757c496a12cb48cc3c28f64ad3fe8312 SHA512 378d199e53144adb9ce9b559b413fd6e092bc90dacddc640b86eea42545a70a3e1bd1a95a3413871d87c98bf9afca0df252186e44e108445b9a278f4d1be6af0 WHIRLPOOL 0d3440fbe318d89f2564f575d9588b274049dbaa026b0740d5032e78b52094054738ea4bda83fe82aa6641627b183f1ebc7463cb2139dcc4e035685612d483c7
-MISC ChangeLog 23478 SHA256 554206d6f4af0c81abada64edd83ee7dec4dc833ff11b6c6169426d5008ecc77 SHA512 c01931e016b19fb3df7847e0e97462807ff8471831596742e12c985deb34c90c322b26ad9e0b20d8e1b31bc157f0f5062b43099456cd6baf8a861e804c2bd812 WHIRLPOOL 6650dd9c76524e8f86a358ab3b32cf8415139fb8d52a26684fe9e997ac8d9e04cdef2ad7d0af9d4195d3b5bef499a51b2a38cf6f5d67eea059c03dccc4ee31ed
-MISC metadata.xml 1004 SHA256 e0fe06415e25d223ea299f1eecf4de6a8e8609d5ec038cc295f61002cd7d7a5e SHA512 f13daa4939dda43a19384a0295171430cdcff2dab90882a2d98c053c45da53732453108edbcdfa93f5a1af061acaa2b5bc973909aafb8359606951e8e70d21dc WHIRLPOOL b307c432b5e1d46e7462d25bd9d4b5ba705fe4c4fbd71701d7a7591daf21a1a152df44fb3bce9cc51703f28cb1a37105630bc9a070d5dd3cb7772585a0c6c517
+EBUILD xbmc-9999.ebuild 6006 SHA256 f72eca1d6d5d0c0a26db871e5a5a28509fcbdaa26fb36f550305bb45cb3ec816 SHA512 e42df2245d8311e3ff9f2c110324258f08f3d566f1942167b999bfe2d800d348134d502424a38b6498431657ed4b6069344015875d2744265086a4d2df4dcb34 WHIRLPOOL 0b14c3d0889b9474bce3cd058ec9d4b23a70de70c6c5c11da62c42689a2a7dd1446e944fe542fe4d5ed83fed816b36cfdb88dbad972e6e1034f956b8793368ae
+MISC ChangeLog 23620 SHA256 e643e2941d9d5a1c16d501387d70393f6c6065a03e3eebd7b9cc23bef5523a20 SHA512 3757b3843b75af8dc9fa7f1793bbd12069c25dcb57e61665e0f7b1c1d238851b48f87c3393edb0a21438d56cf336ad57725e435556eccdff2627d620b7661533 WHIRLPOOL 6600ec01d55698ce7f5f8d40df14cccd94479d0e027024ba381c8a674bb833647446fea2cc3c32548dd80e9bd6fa339d846c9af4fa0f3baef8ddf30c61122f48
+MISC metadata.xml 1055 SHA256 ed787aaaad022ed9386aa49031356c39e378c94651624d753a21891ea33ca4c1 SHA512 590c3d163bd7c5f8fa7867012b1248297424abce53802e21dfcf92e354b53ed8e90d1312df848a3004792c242cb0c8951acb638fffeffba563695dc53fc5b8c8 WHIRLPOOL b69700bf42a2ef988f335325740e9ae23ef738f27cc90af90c1a6f98ea1e44e5405f0b114a11bec57b6fcce6b846a6d4a95b3b9d58d970ca0e8098119f656bcc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQVjRVAAoJELEHsLL7fEFWPm8P/2lLXN58DLiuxVWu9CnzwF40
-5mp3ORM6b5a4DmSeZ82VExbu66b1gIQExmwGbEKAeN8bjahmoTF+8LrZq0OgtoI7
-aDTH4BSovLFcnkPkFfgaObrBFG1mBdBo8fid3SHK0fzFd8keyXg18mRebnlKS/Da
-llMoqOWiBeh21DSCMyxBpqw3xDmKoeyFZ49xlfdscT2qkfYgWLbS9mdj3bMa7Ogj
-RTss0Fb87Mxh6qIgn4aFlU4U5hTnktLwsJxwg8LpoLAMC6Eeka9EFcPHYPALQL2t
-g1h2BUwoVTS01wpLqaW84iaofleuNwy1o+mdO1qb1fElLwqO4faG5aqdYwinxN6v
-QSRKOh4pSvJ2Rbh2tGufYQO9WMOnXWWLqYtVQQcgNxHgfcvCfq46V3RKUPr6uYSF
-kbg+96r80+bI98cV5yYooMLU+oRNR96/ojizcHCq6fMyashdlAgzpALD4EPsX/80
-jKn5Ud7WPnqU2MjVOSvCRwGv9VoZ9TBfqXpk9lVWPORD8GkBLwWWmohQqjPwGvg0
-2SBW/tte1u311MNd3DB/DJ/S0FIbWb/qmqcaIJtK1Hk20YSlbAi8WPg4ayCSnjr/
-9r31gAHPYXv80AXU+8oy5xqa4WfT1cRV8Kaze92i1hJ46AqDfaajOW94zQtcvTBB
-J6OKr9t3XyQKQJg6ZkbM
-=mFFY
+iQIcBAEBCAAGBQJQYKBrAAoJELEHsLL7fEFW5pkQAMZohzMTnOXBo1K5aYzQSKAd
++XVQL9FCNBpZlK1RYAjrZ+xxtPrLlHaVUu/gxN3m0HnF08OwOnJFFifROijykjMb
+G1vZ/+IP8nY8gLw1EVgGT6ajCv9Sifobt5F3sgkDzJrcb3xvQBflwWyqlRNoFe7D
+FeeMUPfnNTCJOHs4HZUFwk1YTG0hhQPHxrZQN7OF1Q8pmp+xsTNVo7ciu/yZ/NrH
+167rp7Wo4Er/skE45LOKfSEGpV+NMfNkLGr6D6m+fi9OupRej/j+rp7zuQwvqBC3
+9vEtyZ+xg9zsv53A2VzmWDkHmSLbT2PYLI4YSfcxPs3ew1bR6kzzvqV5Eb6WVdBf
+bT8HyGdgMPQfi5ED+axOR1K18dU5FnS0v4Bn5/HgPk1vbSvwYF/GtOfa46f2czjq
+K13s8DbUTrdQVuhoyyUk5PiS8E9FXZisqcjYB0fUfAjI9wz4mvL0lJaJhEgfb4Qt
+oKOZp/kP9iypapL7uvOGY5FeF2Capi18kq2cByzhNhd4BPYCqsEBjtFxYKNLvBic
+XBlzMA/sQONY6S+y0PnU8SZqJrdZ7hTDvKUjdKKQh95zv+/lMSEPmam6InYnKszA
+qSGJBsZmwWFQjnMGwblTfTgMAmDQ/ZQOFcfYt0FIwm4pBd2VmWgQj09zqA1x4fSM
+2rVlkqyHx6KAMwDiq/bz
+=4/oi
 -----END PGP SIGNATURE-----
