@@ -8,6 +8,7 @@
  <flag name='cec'>Enable support for HDMI-CEC devices via libcec</flag>
  <flag name='goom'>Enable GOOM visualization plugin</flag>
  <flag name='midi'>Support MIDI files</flag>
+ <flag name='nfs'>Enable NFS client support</flag>
  <flag name='projectm'>Enable projectM visualization plugin</flag>
  <flag name='pvr'>Enable MythTV support</flag>
  <flag name="rtmp">Enable Real Time Messaging Protocol using librtmp</flag>
